# ainewssprite

./: .env.example  .gitignore  README.md  config.yaml.example  pyproject.toml
src/ainewssprite/: __init__.py  __main__.py  cli.py  config.py  db.py  models.py
src/ainewssprite/llm/: base.py  openai.py  summarizer.py
src/ainewssprite/output/: json_export.py  markdown.py
src/ainewssprite/processing/: dedup.py  merger.py
src/ainewssprite/sources/: base.py  hackernews.py  registry.py  rss.py
src/ainewssprite/utils/: http.py  text.py
